Fix footer covering up sidebar when zoomed in
Hides sidebar options

OHM-480

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -955,7 +955,7 @@ body {
   font-weight: bold; text-align: center; font-size: 16px;
 }
 
-.sidebar-div{ float: left; width: 13%; height: 100%; border-right: 1px solid #ccc; }
+.sidebar-div{ float: left; width: 13%; height: 100%; border-right: 1px solid #ccc; z-index: 1; background: #fff }
 #scrollToTop { display: none; width: auto; margin: 15px auto; }
 .exportModelTitle i { top: 3px; left: 3px; }
 
@@ -1207,6 +1207,7 @@ border-bottom-color: #3c3c3c !important;
 footer {
   background: #eff0f3;
   color: #3c3c3c;
+  padding-left: 13%
 }
 footer a {
   color: #3c3c3c;
@@ -1445,7 +1446,7 @@ label { position: relative; }
 
 .about-info h3 { margin-top: 0px; }
 
-.compatible-versions-info { 
+.compatible-versions-info {
   border: 1px solid;
   background-color: #D9FFBE;
   border-color: #d6e9c6;
